# Web_database_Flask

./: COMP0034_random_forest_training.ipynb  README.md  __init__.py  controller_tests.py  pyproject.toml  requirements.txt
.github/workflows/: Web_app.yml
blueprints/: bp_post.py  bp_put.py
src/: __init__.py  controller.py  controller_tests.py  models.py  schemas.py
src/blueprints/: bp.homepage.py  bp_delete.py  bp_get.py  bp_register.py  bp_webpage.py
src/templates/: base.html  homepage.html  login.html  navbar.html  predict.html  register.html
src/tests/: conftest.py  test_delete_functions.py  test_get_functions.py  test_post_functions.py  test_put_functions.py  test_rest.py  test_userstory2.py
tests/: conftest.py  test_login_failure.py  test_navigation_bar.py  test_register_and_repeat_register.py  test_register_failure.py  test_rest.py  test_userstory.py  test_userstory2.py
